@@ -25,7 +25,7 @@
 <!--
 if you do a maven build from the parent you will most likely have to increase your memory footprint this has worked for me
 in the past
-export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
+export MAVEN_OPTS="-Xmx512m -XX:PermSize=256m"
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -123,18 +123,17 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
     </properties>
     <profiles>
         <profile>
-            <id>package</id>
+            <id>package-jars</id>
             <activation>
+			<activeByDefault>true</activeByDefault>
                 <property>
-                    <name>${env.BUILD_NUMBER}</name>
+                    <name>env.BUILD_NUMBER</name>
                 </property>
             </activation>
-        </profile>
-    </profiles>
-    <build>
-        <pluginManagement>
-            <plugins>
-                <!--START DO NOT TOUCH-->
+			<build>
+			<pluginManagement>
+				<plugins>
+				<!--START DO NOT TOUCH-->
                 <plugin>
                     <inherited>true</inherited>
                     <groupId>net.alchim31.maven</groupId>
@@ -152,6 +151,80 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
                                     <jvmArg>-Xms1024m</jvmArg>
                                     <jvmArg>-Xmx2048m</jvmArg>
                                 </jvmArgs>
+								<!--<compilerPlugins>
+                                    <compilerPlugin>
+                                            <groupId>com.mmakowski</groupId>
+                                            <artifactId>maven-specs2-plugin</artifactId>
+                                            <version>0.4.2</version>
+                                    </compilerPlugin>
+                                </compilerPlugins>-->
+                                <args>
+                                    <arg>-g:vars</arg>
+                                    <arg>-Yrangepos</arg>
+                                    
+                                </args>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>test</id>
+                            <goals>
+                                <goal>add-source</goal>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <scalaVersion>${scala.long.version}</scalaVersion>
+                        <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
+                    </configuration>
+                </plugin>
+                <!--END DO NOT TOUCH-->
+				</plugins>
+				</pluginManagement>
+				<plugins>
+				<plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+			</build>
+        </profile>
+		<profile>
+			<id>compile-test</id>
+            <activation>
+			<activeByDefault>true</activeByDefault>
+                <property>
+                    <name>env.BUILD_NUMBER</name>
+                </property>
+            </activation>
+			<build>
+			<pluginManagement>
+				<plugins>
+			<!--START DO NOT TOUCH-->
+                <plugin>
+                    <inherited>true</inherited>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>3.1.6</version>
+                    <executions>
+                        <execution>
+                            <id>compile</id>
+                            <goals>
+                                <goal>add-source</goal>
+                                <goal>compile</goal>
+                            </goals>
+                            <configuration>
+                                <jvmArgs>
+                                    <jvmArg>-Xms1024m</jvmArg>
+                                    <jvmArg>-Xmx2048m</jvmArg>
+                                </jvmArgs>
+								<dependencies>
+                                    <dependency>
+                                        <groupId>org.scoverage</groupId>
+                                        <artifactId>scalac-scoverage-plugin_${scala.short.version}</artifactId>
+                                        <version>${scoverage-plugin.version}</version>
+                                    </dependency>
+                                </dependencies>
                                 <compilerPlugins>
                                     <compilerPlugin>
                                         <groupId>org.scoverage</groupId>
@@ -241,15 +314,41 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
                     </executions>
                 </plugin>
                 <!--END DO NOT TOUCH-->
-
+				</plugins>
+			</pluginManagement>
+			<plugins>
+				<plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+			
+			</build>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>org.scoverage</groupId>
+						<artifactId>scalac-scoverage-plugin_${scala.short.version}</artifactId>
+						<version>${scoverage-plugin.version}</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
+			<dependencies>
+				<dependency>
+					<groupId>org.scoverage</groupId>
+					<artifactId>scalac-scoverage-plugin_${scala.short.version}</artifactId>
+				</dependency>
+		</dependencies>
+		</profile>
+    </profiles>
+    <build>
+        <pluginManagement>
+            <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.12.4</version>
                 </plugin>
-
-
-
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -259,7 +358,6 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
                         <target>1.7</target>
                     </configuration>
                 </plugin>
-
 
                 <!--<plugin>
                     <groupId>org.apache.rat</groupId>
@@ -316,26 +414,7 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
                         </execution>
                     </executions>
                 </plugin>
-                <!--<plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.3</version>
-                    <executions>
-                        <execution>
-                            <id>enforce-maven</id>
-                            <goals>
-                                <goal>enforce</goal>
-                            </goals>
-                            <configuration>
-                                <rules>
-                                    <requireMavenVersion>
-                                        <version>3.0.0</version>
-                                    </requireMavenVersion>
-                                </rules>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>-->
+                
                 <plugin>
                     <groupId>com.github.koraktor</groupId>
                     <artifactId>mavanagaiata</artifactId>
@@ -355,8 +434,6 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
                         </execution>
                     </executions>
                 </plugin>
-
-
 
                <!--<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -583,10 +660,10 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
 
 
         <plugins>
-            <plugin>
+            <!--<plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-            </plugin>
+            </plugin>-->
             <!--<plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
             </plugin>-->
@@ -719,13 +796,14 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
+            <!--<dependency>
                 <groupId>org.scoverage</groupId>
                 <artifactId>scalac-scoverage-plugin_${scala.short.version}</artifactId>
                 <version>${scoverage-plugin.version}</version>
-				
-            </dependency>
-            <dependency>
+				<scope>test</scope>
+            </dependency>-->
+            
+			<dependency>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest_${scala.short.version}</artifactId>
                 <version>2.1.6</version>
@@ -737,6 +815,7 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
                 <version>2.3.10</version>
                 <scope>test</scope>
             </dependency>
+			
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
@@ -970,11 +1049,12 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>org.scoverage</groupId>
             <artifactId>scalac-scoverage-plugin_${scala.short.version}</artifactId>
 			
-        </dependency>
+        </dependency>-->
+		
         <dependency>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest_2.10</artifactId>
@@ -985,6 +1065,7 @@ export MAVEN_OPTS="-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m -XX:PermSize=2048m"
             <artifactId>specs2_${scala.short.version}</artifactId>
 			
         </dependency>
+		
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
